--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1.0,maximum-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <!-- <link rel="apple-touch-icon" href="images/icon.png"> icon.png 57x57; icon@2x.png 114x114-->
+    <link rel="apple-touch-icon" href="images/icon.png"> <!-- icon.png 57x57; icon@2x.png 114x114-->
 
     <!--                                                 -->
     <!-- Mobile application to calculate                 -->
@@ -15,6 +15,7 @@
     <!-- George Fisher                                   -->
     <!-- https://github.com/grfiv/saving-for-retirement  -->
     <!--                                                 -->
+    <title>Saving For Retirement</title>
 
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -142,7 +143,7 @@
             <ul>
                 <li>Retirement year: <span data-content="retYear"></span></li>
                 <li>Life expectancy: <span data-content="lifeExpectancy"></span></li>
-                <li>Income required at first year of retirement: <span style="" data-content="initRetIncome_fmt"></span></li>
+                <!-- <li>Income required at first year of retirement: <span style="" data-content="initRetIncome_fmt"></span></li> -->
                 <li>Current savings: <span data-content="portfolio_num"></span></li>
             </ul>
             <div class="table-responsive">
@@ -157,13 +158,19 @@
                     </tr>
                 </table>
             </div>
+            <p data-content="savings_blurb"></p>
 
             <!-- show additional options for savings -->
+            <button id="middle-inner-options-return-btn" class="inner-options-return-btn" type="button" class="btn btn-default btn-sm" style="margin-bottom: 10px;">
+                <span class="glyphicon glyphicon-arrow-right"></span> Return
+            </button>
+            <br>
+
             <input type="button" id="options-btn" value="Additional Options">
             <div id="options" style="display:none;">
                 <p>The <strong>Required Savings</strong> assumes it's exactly enough and you spend it all by the end of your retirement;
                     <br>
-                   but you may need even more than that if you live longer or work fewer years.
+                   but you may need even more than that if you live longer or work fewer years or take out more.
                 </p>
                 <table class="table table-bordered">
                     <caption>End with the same amount as you start with:</caption>
@@ -188,7 +195,7 @@
                         </tr>
                     </table>
 
-                <button id="inner-options-return-btn" type="button" class="btn btn-default btn-sm">
+                <button class="inner-options-return-btn" type="button" class="btn btn-default btn-sm">
                     <span class="glyphicon glyphicon-arrow-right"></span> Return
                 </button>
                 </div>
@@ -307,8 +314,9 @@
         // creates the HTML dynamically
         $(document).on("click", "#options-btn", function() {
             $('#options').show();
+            $('#middle-inner-options-return-btn').hide();
         });
-        $(document).on("click", "#inner-options-return-btn",
+        $(document).on("click", ".inner-options-return-btn",
                 function() {
                     $('#pageone').show();
                     $('#pagetwo').hide();
@@ -366,13 +374,34 @@
         var minRetPortfolio_fmt = '$' + Number(minRetPortfolio.toFixed(0)).toLocaleString();
 
         // monthly amount required
+        var savings_blurb = "";
+        if (retYear == "Currently retired") {
+            savings_blurb = "Your savings are sufficient."
+        } else {
+            savings_blurb = "Your savings will be enough when you retire in " + retYear;
+        }
+
         var minPortMonthly = 0;
         if (FV(portfolio_num, invReturn_num, yrsToRet_num) < minRetPortfolio) {
             minPortMonthly = -PMT(invReturn_num, 12, yrsToRet_num * 12, -portfolio_num, minRetPortfolio);
+            if (retYear == "Currently retired") {
+                savings_blurb = "You have not saved enough to take out as much as you planned."
+            } else {
+                savings_blurb = "You need to save in order to have enough when you retire in "
+                        + retYear + "<br>" +
+                        "Your current savings will only grow to " +
+                        '$' + Number(FV(portfolio_num, invReturn_num, yrsToRet_num).toFixed(0)).toLocaleString()
+                         + " without saving more";
+            }
         }
         var minPortMonthly_fmt = '$' + Number(minPortMonthly.toFixed(0)).toLocaleString();
-        if (retYear == "Currently retired") {minPortMonthly_fmt = '("retired" assumes no further savings possible)';}
-        
+        if (retYear == "Currently retired") {
+            if (FV(portfolio_num, invReturn_num, yrsToRet_num) < minRetPortfolio) {
+                minPortMonthly_fmt = '("retired" assumes no further savings possible)';
+            } else {
+                minPortMonthly_fmt = '';
+            }
+        }
 
         // II. The portfolio required to end retirement with your original minimum portfolio
         // ---------------------------------------------------------------------------------
@@ -419,6 +448,7 @@
                     lifeExpectancy: lifeExpectancy,
                     initRetIncome_fmt: initRetIncome_fmt,
                     portfolio_num: '$' + Number(portfolio_num.toFixed(0)).toLocaleString(),
+                    savings_blurb: savings_blurb,
                     minRetPortfolio_fmt: minRetPortfolio_fmt,
                     minPortMonthly_fmt: minPortMonthly_fmt,
                     maintainPortfolio_fmt: maintainPortfolio_fmt,
