--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1.0,maximum-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="images/icon.png"> <!-- icon.png 57x57; icon@2x.png 114x114-->
@@ -120,7 +119,7 @@
         <!--              -->
         <!-- Results Page -->
         <!--              -->
-        <section data-role="page" id="results-page" style="display: none;">
+        <section id="results-page" style="display: none;">
 
             <header class="page-header">
                <button type="button" class="return-btn btn btn-default btn-sm">
@@ -206,7 +205,7 @@
         <!--           -->
         <!-- Help Page -->
         <!--           -->
-        <section data-role="page" id="help-page" style="display: none;">
+        <section id="help-page" style="display: none;">
 
             <header class="page-header">
                 <button type="button" class="return-btn btn btn-default btn-sm">
@@ -460,7 +459,7 @@
         // The income required on the first year of retirement
         // ===================================================
         // this is the future value of the current-dollar income required, adjusted for inflation
-        var initRetIncome = FV(-income_num, 0, inflation_num, yrsToRet_num, 'end');
+        var initRetIncome     = FV(-income_num, 0, inflation_num, yrsToRet_num, 'end');
         var initRetIncome_fmt = '$' + Number(initRetIncome.toFixed(0)).toLocaleString();
 
 
