minor change to css comments

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
     <style>
         /**
-         * minor tweaks
+         * for Help page
+         * bold title, indented description
          */
         dt {
             font-weight: bold;
