--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1.0,maximum-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="images/icon.png"> <!-- icon.png 57x57; icon@2x.png 114x114 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" href="images/icon.png" /> <!-- icon.png 57x57; icon@2x.png 114x114 -->
+    <link rel="shortcut icon" href="images/favicon.ico" />
 
     <!--                                                 -->
     <!-- Mobile application to calculate                 -->
