--- a/index.html
+++ b/index.html
@@ -329,6 +329,110 @@
         }
     }
     /**
+     * Future Value Interest Factor of a Growing Annuity
+     *
+     * @param i {number} the nominal rate of interest or investment return as a percent: 5 == 5%
+     * @param n {number} the number of periods
+     * @param g {number} the periodic growth rate of the annuity payment (inflation) as a percent: 3 = 3%
+     * @paran begining_of_period {boolean} false => ordinary annuity (end of period)
+     *                                     true => annuity due (beginning of period)
+     *                                     default = false (ordinary annuity)
+     *
+     * @returns {number} the fractional FVIFGA
+     *
+     * citation: Auxier, Wachowicz GROWING ANNUITIES http://web.utk.edu/~jwachowi/growing_annuity.pdf
+     *
+     */
+    function FVIFGA(i, n, g, begining_of_period) {
+        var _i = i / 100;
+        var _g = g / 100;
+        var ret = null;
+        begining_of_period = typeof begining_of_period !== 'undefined' ? begining_of_period : false;
+
+        if (_i != _g) {
+            var numerator = Math.pow((1 + _i), n) - Math.pow((1 + _g), n);
+            var denominator = (_i - _g);
+            ret = numerator / denominator;
+        } else {
+            ret = n * Math.pow((1 + _i), n - 1);
+        }
+        if (begining_of_period) ret = ret * (1 + _i);
+        return ret;
+    }
+    /**
+     * Future Value of a Growing Annuity
+     *
+     * @prarm R {number} the receipt or payment for the first period
+     *
+     * @param i {number} the nominal rate of interest or investment return as a percent: 5 == 5%
+     * @param n {number} the number of periods
+     * @param g {number} the periodic growth rate of the annuity payment (inflation) as a percent: 3 = 3%
+     * @paran begining_of_period {boolean} false => ordinary annuity (end of period)
+     *                                     true => annuity due (beginning of period)
+     *                                     default = false (ordinary annuity)
+     *
+     * @returns {number} the FVGA
+     *
+     * citation: Auxier, Wachowicz GROWING ANNUITIES http://web.utk.edu/~jwachowi/growing_annuity.pdf
+     *
+     */
+    function FVGA (R, i, n, g,  begining_of_period) {
+        return R * FVIFGA(i, n, g, begining_of_period);
+    }
+    /**
+     * Present Value Interest Factor of a Growing Annuity
+     *
+     * @param i {number} the nominal rate of interest or investment return as a percent: 5 == 5%
+     * @param n {number} the number of periods
+     * @param g {number} the periodic growth rate of the annuity payment (inflation) as a percent: 3 = 3%
+     * @paran begining_of_period {boolean} false => ordinary annuity (end of period)
+     *                                     true => annuity due (beginning of period)
+     *                                     default = false (ordinary annuity)
+     *
+     * @returns {number} the fractional PVIFGA
+     *
+     * citation: Auxier, Wachowicz GROWING ANNUITIES http://web.utk.edu/~jwachowi/growing_annuity.pdf
+     *
+     */
+    function PVIFGA(i, n, g, begining_of_period) {
+        var _i = i / 100;
+        var _g = g / 100;
+        var ret = null;
+        begining_of_period = typeof begining_of_period !== 'undefined' ? begining_of_period : false;
+
+        if (_i != _g) {
+            var numerator = 1 +  Math.pow(((1 + _g) / (1 + _i)), n) ;
+            var denominator = (_i - _g);
+            ret = numerator / denominator;
+        } else {
+            ret = n / (1 + _i);
+        }
+        if (begining_of_period) ret = ret * (1 + _i);
+        return ret;
+    }
+    /**
+     * Present Value of a Growing Annuity
+     *
+     * @prarm R {number} the receipt or payment for the first period
+     *
+     * @param i {number} the nominal rate of interest or investment return as a percent: 5 == 5%
+     * @param n {number} the number of periods
+     * @param g {number} the periodic growth rate of the annuity payment (inflation) as a percent: 3 = 3%
+     * @paran begining_of_period {boolean} false => ordinary annuity (end of period)
+     *                                     true => annuity due (beginning of period)
+     *                                     default = false (ordinary annuity)
+     *
+     * @returns {number} the PVGA
+     *
+     * citation: Auxier, Wachowicz GROWING ANNUITIES http://web.utk.edu/~jwachowi/growing_annuity.pdf
+     *
+     */
+    function PVGA (R, i, n, g,  begining_of_period) {
+        return R * PVIFGA(i, n, g, begining_of_period);
+    }
+
+    /* ==================================== */
+    /**
      * Present Value of a Growing Annuity Due
      *
      * @param P {float} The first-period's payment
